--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
   border: 0;
   margin: 0;
   text-decoration: none;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -73,7 +74,6 @@ body {
 .btn-1:hover {
   background: #0c2037;
   color: white;
-
 }
 
 .second {
@@ -85,7 +85,6 @@ body {
 
 .titulo {
   color: white;
-
 }
 
 .titulo h2 {
@@ -105,10 +104,35 @@ body {
   background-color: #dbe2ef;
   width: 90%;
   margin: auto;
-height: 100%;
+  height: 100%;
 }
 
-label{
+label {
   font-size: 14px;
   font-weight: 600;
+}
+
+.sub-titulo h2 {
+  font-size: 40px;
+  color: white;
+  font-weight: 700;
+  margin-top: 30px;
+  text-align: center;
+}
+
+.cuerpo_reserva {
+  background-color: #dbe2ef;
+  height: 400px;
+  border-radius: 10px;
+  padding: 20px;
+}
+
+.info_reserva {
+  background-color: #dbe2ef;
+  height: 400px;
+  border-radius: 10px;
+}
+
+.reserva_label {
+  font-size: 20px;
 }
