cambio de estilo

--- a/styles/style.css
+++ b/styles/style.css
@@ -93,7 +93,7 @@ body {
 }
 
 .c_form {
-  background-color: #e5efdb;
+  background-color: #dbe2ef;
   height: 530px;
   width: 750px;
   border-radius: 20px;
